--- a/FlightAnimator-Demo/FlightAnimator-Demo.xcodeproj/xcshareddata/xcschemes/FlightAnimator-Demo.xcscheme
+++ b/FlightAnimator-Demo/FlightAnimator-Demo.xcodeproj/xcshareddata/xcschemes/FlightAnimator-Demo.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "0930"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -26,16 +26,25 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "13B951D92090F0A500C161D3"
+            BuildableName = "FlightUITests.xctest"
+            BlueprintName = "FlightUITests"
+            ReferencedContainer = "container:FlightAnimator-Demo.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13D0A1261D30297900B87760"
-               BuildableName = "FlightAnimatorTests.xctest"
-               BlueprintName = "FlightAnimatorTests"
+               BlueprintIdentifier = "13B951D92090F0A500C161D3"
+               BuildableName = "FlightUITests.xctest"
+               BlueprintName = "FlightUITests"
                ReferencedContainer = "container:FlightAnimator-Demo.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -56,7 +65,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
